--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,10 @@ img {
     height: auto;
 }
 
+button {
+    cursor: pointer;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -81,6 +85,7 @@ img {
 .header-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .link-nav, .address {
@@ -96,4 +101,419 @@ img {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+}
+
+.header-logo {
+    padding: 16px 0;
+    display: block;
+}
+
+.accent_header {
+    color: #2e2f42;
+}
+
+.burger-btn {
+    border: none;
+    padding: 0;
+    background-color: transparent;
+}
+
+.burger-icon {
+    display: block;
+    fill: #2F2F37;
+}
+
+@media screen and (min-width: 768px) {
+    .burger-btn {
+        display: none;
+    }
+
+    .link-nav {
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .header-nav {
+        display: flex;
+        align-items: center;
+    }
+
+    .header-logo {
+        padding: 24px 0;
+        margin-right: 120px;
+    }
+
+    .link {
+        font-size: 16px; 
+        line-height: 1.5; 
+        font-weight: 500; 
+        letter-spacing: 0.02em; 
+        color: #2e2f42;
+        padding: 24px 0;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+    .link.current {
+        position: relative;
+        color: #404bbf;
+    }
+
+    .link.current::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: #404bbf;
+    }
+
+    .link-address {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .link_contacts {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #434455;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .address {
+        font-style: normal;
+        display: block;
+    } 
+
+    .link:hover, .link:focus {
+        color: #404bbf;
+    }
+
+    .link_contacts:hover, .link_contacts:focus {
+        color: #404bbf;
+    }
+    
+}
+
+@media screen and (min-width: 1158px) {
+    .header-logo {
+        margin-right: 76px;
+    } 
+
+    .link-address {
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .link_contacts {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 24px 0;
+    }
+}
+
+/* mobile-menu */
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.mobile-menu-container {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.mobile-menu-close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    background-color: transparent;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.mobile-menu-nav {
+    margin-bottom: auto;
+}
+
+.mobile-link-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.mobile-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.mobile-link-address {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.mobile-link_contacts {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    font-style: normal;
+    color: #434455;
+}
+
+.mobile-social-links {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    margin-top: 48px;
+}
+
+.mobile-icon {
+    fill: #f4f4fd;
+}
+
+.mobile-link-icon,
+.link-icon,
+.link-icon-ftr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+
+/*  FIRST SECCTION TITLE */
+
+.title_section {
+    max-width: 320px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile-people-office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #2e2f42;
+    background-position: center;
+    margin: auto;
+    padding: 72px 0;
+}
+
+@media screen and (max-width: 767px) and (min-resolution: 192dpi) {
+    .title_section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/mobile-people-office@2x.jpg);
+    }
+    
+}
+
+.title {
+    font-size: 36px;
+    line-height: 1.11;
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    text-align: center;
+    max-width: 216px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 72px;
+
+}
+
+.btn {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 500;
+    color: #fff;
+    background-color: #4d5ae5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    border: none;
+    cursor: pointer;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    padding: 16px 32px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn:hover,
+.btn:focus {
+    background-color: #404BBF;
+}
+
+@media screen and (min-width: 768px) {
+    .title_section {
+        max-width: 768px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-people-office.jpg);
+        padding: 112px 0;
+    }
+    
+    .title {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+        max-width: 496px;
+    }
+    
+}
+
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+    .title_section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet-people-office@2x.jpg);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .title_section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+        max-width: 1440px;
+        padding: 188px 0;
+    }
+    .title {
+        font-size: 56px; 
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 48px;
+    }
+}
+
+@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+    .title_section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office@2x.jpg);
+    }
+}
+
+/* SECOND SECTION ADVANTAGES */
+
+.section {
+    padding: 96px 0;
+}
+
+.advantages-container {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
+
+.advantages-li {
+    max-width: 288px;
+
+}
+
+.container-image-advantages {
+    display: none;
+}
+
+.title_three {
+    font-size: 36px;
+    line-height: 1.1;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.txt_main {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: #434455;
+    letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+    .advantages-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+    .advantages-li {
+        max-width: 356px;
+    }
+    .title_three {
+        text-align: start;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container-image-advantages {
+            display: flex;
+            max-width: 264px;
+            height: 112px;
+            border: 1px solid #8e8f99;
+            border-radius: 4px;
+            background-color: #F4F4FD;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 8px;
+    }
+    .advantages-container {
+        flex-wrap: nowrap;
+        gap: 24px;
+    }
+    .advantages-li {
+            max-width: 264px;
+    }
+    .section {
+    padding: 120px 0;
+    }
+.title_three {
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 500;
+}
+.txt_main {
+    font-weight: 400;
+}
 }
