--- a/css/styles.css
+++ b/css/styles.css
@@ -575,6 +575,10 @@ button {
     margin: 0 auto;
 }
 
+.icon {
+    fill: #f4f4fd;
+}
+
 .social-links {
     display: flex;
     gap: 24px;
@@ -618,7 +622,49 @@ button {
     background-color: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .other-container {
     max-width: 1158px;
 }
+
+}
+
+/* FOURTH SECTION, PORTFOLIO */
+
+.portfolio_container {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.portfolio-li {
+    border-bottom: 1px solid #e7e9fc;
+    border-radius: 0px 0px 4px 4px;
+    max-width: 288px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.img_portfolio {
+    object-fit: scale-down;
+}
+
+.overlay-txt {
+    display: none;
+}
+
+.app-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+
+.title-app {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        text-align: start;
 }
