--- a/css/styles.css
+++ b/css/styles.css
@@ -639,15 +639,7 @@ button {
 
 .portfolio-li {
     border-bottom: 1px solid #e7e9fc;
-    border-radius: 0px 0px 4px 4px;
-    max-width: 288px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-            0px 1px 1px rgba(46, 47, 66, 0.16),
-            0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.img_portfolio {
-    object-fit: scale-down;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .overlay-txt {
@@ -667,4 +659,55 @@ button {
         letter-spacing: 0.02em;
         color: #2e2f42;
         text-align: start;
+}
+
+@media screen and (min-width: 768px) {
+    .portfolio_container {
+            flex-direction: row;
+            flex-wrap: wrap;
+            column-gap: 24px;
+            row-gap: 72px;
+        }
+}
+
+@media screen and (min-width: 1158px) {
+    .portfolio_container {
+            row-gap: 48px;
+            column-gap: 24px;
+    
+        }
+    .portfolio-li {
+            max-width: calc((100%-48px)/3);
+            transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    .portfolio-li:hover {
+            box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+                0px 1px 1px rgba(46, 47, 66, 0.16),
+                0px 2px 1px rgba(46, 47, 66, 0.08);
+        }
+    
+    .portfolio-li:hover .overlay-txt {
+            transform: translatey(0);
+        }
+    
+    .overlay {
+            position: relative;
+            overflow: hidden;
+        }
+    
+    .overlay-txt {
+            display: block;
+            position: absolute;
+            top: 0;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #f4f4fd;
+            padding: 40px 32px;
+            background-color: #4d5ae5;
+            height: 100%;
+            width: 100%;
+            transform: translateY(100%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 }
