--- a/css/styles.css
+++ b/css/styles.css
@@ -323,6 +323,14 @@ button {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.mobile-color-studio {
+    color: #404BBF;
+}
+
+.mobile-color-tel {
+    color: #4D5AE5;
+}
+
 @media screen and (min-width: 768px) {
     .mobile-menu {
         display: none;
