--- a/css/styles.css
+++ b/css/styles.css
@@ -1072,6 +1072,20 @@ button {
     margin-bottom: 24px;
 }
 
+.modal-input:focus {
+    outline: none;
+    border-color: #4d5ae5;
+}
+
+.modal-input:focus+.modal-icon {
+    fill: #4D5AE5;
+}
+
+.modal-textarea:focus {
+    outline: none;
+    border-color: #4d5ae5;
+}
+
 @media screen and (min-width: 768px) {
     .modal {
         min-height: 584px;
@@ -1119,15 +1133,6 @@ button {
 
     .modal-icon {
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .modal-input:focus {
-    outline: none;
-    border-color: #4d5ae5;
-    }
-
-    .modal-input:focus + .modal-icon {
-    fill: #4D5AE5;
     }
 
     .modal-textarea {   
